Fixed background Alignment issue for chapter and lesson name  in learning path

--- a/src/components/learningPathway/chpaterLessonBox.css
+++ b/src/components/learningPathway/chpaterLessonBox.css
@@ -1,6 +1,6 @@
 /* CSS for ChapterLessonBox component */
 .chapter-lesson-box {
-  max-width: 300px;
+  max-width: 800px;
   min-width: 150px;
   position: fixed;
   bottom: 1.5vh;
@@ -12,7 +12,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
-  min-height: 7vh;
+  padding: 6px 18px;
+  background-color: #fffdee;
+  border-radius: 15px;
+  /* min-height: 7vh; */
 }
 
 .chapter-lesson-text {
